feature post product comment (#6)
* add create product comment api spec

* fix rate parameter
